set all scrollbars to auto to prevent preconsuming space

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -35,7 +35,7 @@ a {
 .side-list {
     width: 100%;
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .long-text {
@@ -49,12 +49,12 @@ a {
 
 .formlist-column {
     height: 50vh;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .message-box {
     height: 50vh;
-    overflow-y: scroll
+    overflow-y: auto
 }
 
 .clickable {
@@ -63,7 +63,7 @@ a {
 
 .payment-wrapper {
     width: auto;
-    overflow-x: scroll;
+    overflow-x: auto;
     white-space: nowrap;
 }
 
